src/test/run-pass/log-ret.rs
// xfail-test

fn f() { log ret; }
fn main() { f(); }

