src/test/compile-fail/oversized-literal.rs
// error-pattern:literal out of range

fn main() { log(debug, 300u8); }
